# chatRoomUI

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/: AuthService.cpp  AuthService.h
src/ui/: main.qml  resources.qrc
src/ui/pages/: LoginPage.qml
src/viewmodel/: LoginViewModel.cpp  LoginViewModel.h
